@@ -1,4 +1,10 @@
 
 [ZooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip)
 
+windows:
+
 `java -jar zookeeper-dev-ZooInspector.jar`
+
+linux:
+
+`java -Djava.ext.dirs=./lib  -jar zookeeper-dev-ZooInspector.jar`
